# HQSec-SOCAI

./: .env.sample  .gitignore  ADVANCED_SETUP.md  AI_MCP_INTEGRATION_SUMMARY.md  API_PERFORMANCE_OPTIMIZATION.md  BACKEND_IMPROVEMENTS_SUMMARY.md  CHAT_INTERFACE_COMPLETE.md  CLEANUP-SUMMARY.md  CLEANUP_ANALYSIS.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_FINAL.md  CURRENT_STATUS_SUMMARY.md  DATABASE_PERFORMANCE_OPTIMIZATION.md  DEMO.md  DEMO_SCRIPT.md  DEMO_TEST_DATA.md  Dockerfile  Dockerfile.basic  Dockerfile.dev  Dockerfile.minimal  Dockerfile.prod  ENTERPRISE-SETUP.md  FRONTEND_PERFORMANCE_OPTIMIZATION.md  FRONTEND_UPGRADE_COMPLETE.md  FRONTEND_UPGRADE_PHASE3_COMPLETE.md  FRONTEND_UPGRADE_PLAN.md  FRONTEND_UPGRADE_PROGRESS.md  FRONTEND_UPGRADE_PROGRESS_UPDATE.md  GET-STARTED.md  LAUNCH_INSTRUCTIONS.md  PHASE1A_SECURITY_IMPLEMENTATION.md  PHASE1B_STORAGE_SEARCH_IMPLEMENTATION.md  PHASE1C_MICROSERVICES_IMPLEMENTATION.md  PHASE2_ML_IMPLEMENTATION.md  PRESENTATION_CHECKLIST.md  PRESENTATION_FLOW.md  PRESENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE_CLEAN.md  QUICKSTART.md  (+49 more)
advanced/: WINDOWS_README.md  demo-windows-full.ps1  demo-windows.ps1  setup-full.sh  setup-windows-full.ps1  test-full-stack.ps1
frontend/: .eslintrc.js  .prettierignore  Dockerfile  craco.config.js  cypress.config.ts  nginx.conf  package.json  tsconfig.json
frontend/config/: production.js
frontend/cypress/e2e/: dashboard.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/public/: cdn-config.js  sw.js
frontend/scripts/: analyze-bundle.js  build-production.js  optimize-performance.js
frontend/src/: App.js  App.tsx  setupTests.ts  test-utils.tsx
frontend/src/components/: AIDashboard.js  AIInsights.js  APIPerformanceMonitor.js  AuthProvider.js  AuthProvider.tsx  ConnectionStatus.tsx  DatabaseMonitor.js  ErrorFallback.tsx  FileManager.js  FileUpload.js  Layout.js  Layout.tsx  LogSearch.js  LoginForm.js  MCPTools.js  MLAnalysis.js  MLDashboard.js  MetricsDashboard.js  OptimizedDashboard.js  OptimizedImage.js  ProtectedRoute.js  RealtimeAlerts.js  RealtimeConnection.js  RealtimeMetrics.tsx  RealtimeNotifications.js  RealtimeNotifications.tsx  RegisterForm.js  VirtualizedList.js
frontend/src/components/__tests__/: Button.test.tsx  RealtimeNotifications.test.tsx
frontend/src/components/analytics/: AnalyticsDashboard.jsx  MCPIntegrationDashboard.jsx
frontend/src/components/charts/: BarChart.tsx  LineChart.tsx  PieChart.tsx  index.ts
frontend/src/components/forms/: Checkbox.tsx  Input.tsx  Select.tsx  index.ts
frontend/src/components/layout/: Card.tsx  Container.tsx  Grid.tsx  index.ts
frontend/src/components/ui/: Button.tsx  LoadingSpinner.tsx  Modal.tsx  index.ts
frontend/src/hooks/: useAutoRefresh.js  useWebSocket.ts
frontend/src/mocks/: server.ts
frontend/src/pages/: APIPerformance.js  AlertDetail.js  AlertDetail.tsx  Alerts.tsx  Chat.tsx  Dashboard.js  Dashboard.tsx  DatabaseMonitor.js  FileManager.js  LogSearch.js  Metrics.js  Metrics.tsx  Settings.js  Settings.tsx
frontend/src/pages/__tests__/: Chat.test.tsx  Dashboard.test.tsx
frontend/src/services/: api.js  websocket.ts
frontend/src/store/: api.ts  index.ts
frontend/src/store/slices/: alertsSlice.ts  authSlice.ts  uiSlice.ts
frontend/src/types/: index.ts
frontend/src/utils/: lazyLoading.js  lazyLoading.ts  performance.ts
kali-mcp-server/: Dockerfile
migrations/: env.py
migrations/versions/: 0002_add_performance_indexes.py
scripts/: generate_secrets.py
src/soc_agent/: analytics_api.py  analyzer.py  api.py  auth.py  auth_api.py  auth_middleware.py  caching.py  circuit_breaker.py  compression.py  config.py  database.py  database_cluster.py  elasticsearch_service.py  gateway.py  mcp_analytics_api.py  messaging.py  ml_api.py  models.py  monitoring.py  rate_limiting.py  realtime.py  realtime_api.py  request_logging.py  security_utils.py  storage.py  storage_api.py  streaming_api.py  timeseries_service.py  webapp.py  webapp_basic.py  webapp_phase2.py  webapp_phase3.py
src/soc_agent.egg-info/: PKG-INFO  SOURCES.txt
src/soc_agent/adapters/: __init__.py  crowdstrike.py  wazuh.py
src/soc_agent/ai/: __init__.py  llm_client.py  risk_assessor.py  threat_analyzer.py
src/soc_agent/analytics/: __init__.py  analytics_dashboard.py  attack_attribution.py  business_impact.py  mcp_analytics_bridge.py  threat_hunting.py  threat_intelligence.py  vulnerability_correlation.py
src/soc_agent/auto_retraining/: __init__.py  data_collector.py  model_validator.py  retraining_pipeline.py  retraining_scheduler.py
src/soc_agent/mcp/: __init__.py  kali_tools.py  server_registry.py  vulnerability_scanner.py
src/soc_agent/ml/: __init__.py  anomaly_detector.py  false_positive_filter.py  feature_engineer.py  incident_classifier.py  model_manager.py  model_monitor.py  pattern_recognizer.py  risk_scorer.py
src/soc_agent/services/: ai_service.py  alert_service.py  analytics_service.py  auth_service.py  intel_service.py  notification_service.py  response_service.py  storage_service.py
src/soc_agent/serving/: __init__.py  ab_testing.py  mlflow_serving.py  model_registry.py  tensorflow_serving.py
src/soc_agent/streaming/: __init__.py  flink_processor.py  kafka_consumer.py  kafka_producer.py  stream_analytics.py
