[project]
name = "soc-agent"
version = "1.2.0"
description = "SOC webhook receiver: enrich IOCs, score threats, and notify via Email/Autotask"
readme = "README.md"
authors = [{ name = "BlackOak Security" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "requests>=2.32",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.12",
  "cryptography>=41.0",
  "python-multipart>=0.0.6",
  "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
