[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-agent"
version = "1.0.0"
description = "Security Operations Center Agent - Webhook Analyzer with AI/ML capabilities"
authors = [
    {name = "SOC Agent Team", email = "team@socagent.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "requests>=2.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "urllib3>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "brotli>=1.0.9",
    "cryptography>=41.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "mlflow>=2.5.0",
    "joblib>=1.3.0",
    "pickle5>=0.0.12",
    "statsmodels>=0.14.0",
    "prophet>=1.1.4",
    "feature-engine>=1.6.0",
    "category-encoders>=2.6.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "eli5>=0.13.0",
    "pyod>=1.1.0",
    "isolation-forest>=0.1.0; python_version < '3.12'",
    "hdbscan>=0.8.0",
    "umap-learn>=0.5.0",
    "kafka-python>=2.0.0",
    "apache-flink>=1.18.0; python_version < '3.12'",
    "pydantic-kafka>=0.1.0; python_version < '3.12'",
    "tensorflow-serving-api>=2.13.0",
    "bentoml>=1.1.0",
    "boto3>=1.34.0",
    "elasticsearch>=8.0.0",
    "influxdb-client>=1.38.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/socagent/soc-agent"
Documentation = "https://docs.socagent.com"
Repository = "https://github.com/socagent/soc-agent.git"
Issues = "https://github.com/socagent/soc-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/soc_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
